--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="all,follow" />
+    <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
     <!-- Google fonts-->
     <link
       rel="stylesheet"
